--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3784,6 +3784,7 @@ input, select, textarea {
 
 		}
 
+/* Giang added */
 /* Adding two columns responsive */
 /* Create two equal columns that floats next to each other */
 .column {
@@ -3811,3 +3812,41 @@ input, select, textarea {
   .circle {
 	list-style-type: circle
   }
+
+  /* Adding: Back to Homepage */
+ .backtohomepage {
+	text-align: right;
+	color: blueviolet;
+	font-weight: bold;
+ }
+
+ /* Adding typing effect */
+ .wrapper {
+	height: 10vh;
+	/*This part is important for centering*/
+	display: grid;
+	place-items: left;
+  }
+  
+  .typing-demo {
+	width: 60ch;
+	animation: typing 3s steps(22), blink .5s step-end infinite alternate;
+	white-space: nowrap;
+	overflow: hidden;
+	border-right: 3px solid;
+	font-family: monospace;
+	text-decoration: none;
+  }
+  
+  @keyframes typing {
+	from {
+	  width: 0
+	}
+  }
+	  
+  @keyframes blink {
+	0% {
+	  border-color: transparent
+	}
+  }
+
