--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3847,7 +3847,7 @@ input, select, textarea {
   
   .typing-demo {
 	width: 60ch;
-	animation: typing 3s steps(22), blink .5s step-end infinite alternate;
+	animation: typing 5s steps(22), blink .5s step-end infinite alternate;
 	white-space: nowrap;
 	overflow: hidden;
 	border-right: 3px solid;
@@ -3867,8 +3867,10 @@ input, select, textarea {
 	}
   }
 
+/* End to Adding typing effect */
+
 .textbackground {
-	background-color: #006393;
+	background-color: #F2F2F2;
 	padding: 2px;
 	border-radius: 5px;
 }
@@ -3878,5 +3880,17 @@ input, select, textarea {
 }
 
 .aboveline {
-	border-top: solid 1px #DEDEDE;
+	border-top: solid 5px #333;
+}
+
+.imagefix {
+	float: left;
+    max-width: 100%;
+    max-height: 170px;
+    object-fit: scale-down;
+	margin-left: auto;
+  	margin-right: auto;
+	padding-bottom: 20px;
+	display: block;
+	border-bottom: solid 1px #DEDEDE;
 }
