--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3875,7 +3875,7 @@ input, select, textarea {
 /* End to Adding typing effect */
 
 .textbackground {
-	background-color: #232323;
+	background-color: #E5E2E2;
 	padding: 2px;
 	border-radius: 5px;
 }
