--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url(fontawesome-all.min.css);
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap');
+
 
 /*
 	Stellar by HTML5 UP
@@ -128,7 +129,7 @@ input, select, textarea {
 	}
 
 	body, input, select, textarea {
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: "Quicksand", Helvetica, sans-serif;
 		font-size: 17pt;
 		font-weight: 400;
 		line-height: 1.65;
@@ -215,10 +216,10 @@ input, select, textarea {
 	}
 
 	h2 {
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Quicksand', sans-serif;
 		font-size: 1.5em;
 		text-align: left;
-		font-weight: 600;
+		font-weight: 700;
 	}
 
 	h2 span {
@@ -3369,6 +3370,7 @@ input, select, textarea {
 
 		#main strong, #main b {
 			color: #636363;
+			font-weight: bold;
 		}
 
 		#main h1, #main h2, #main h3, #main h4, #main h5, #main h6 {
@@ -3900,3 +3902,7 @@ input, select, textarea {
 	border-bottom: solid 1px #DEDEDE;
 }
 
+.blogpost_link {
+	color: grey;
+	text-decoration: underline;
+}
