--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,9 +48,27 @@ blockquote, q {
 	}
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+		border-collapse: collapse;
+	  }
+	   th {
+		background: #ccc;
+	  }
+	  .columnname {
+		font-weight: bold;
+	  }
+	  th, td {
+		border: 1px solid #ccc;
+		padding: 8px;
+		text-align: left;
+	  }
+	  
+	  tr:nth-child(even) {
+		background: #efefef;
+	  }
+	  
+	  tr:hover {
+		background: #d1d1d1;
+	  }
 
 body {
 	-webkit-text-size-adjust: none;
