--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url(fontawesome-all.min.css);
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
 
 /*
 	Stellar by HTML5 UP
@@ -38,6 +40,10 @@ ol, ul {
 	list-style: none;
 }
 
+li {
+	margin-left: 30px;
+}
+
 blockquote, q {
 	quotes: none;
 }
@@ -47,21 +53,48 @@ blockquote, q {
 		content: none;
 	}
 
-table {
+	table {
+		width: 100%;
 		border-collapse: collapse;
+		margin: 0 auto;
+	}
+	
+	th, td {
+		padding: 10px;
+		text-align: left;
+		border: 1px solid #ddd;
+	}
+	
+	thead th {
+		font-weight: bold !important;
+	}
+	
+
+/*
+table {
+		width: 100%;
+		border-collapse: collapse;
+		border: 1px solid red;
 	  }
+	  .table-container {
+		max-width: 800px;
+		margin: auto;
+		/* background-color: white; */
+		/* padding: 20px;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		border-radius: 8px; */
+		}/*
 	   th {
-		background: #ccc;
-	  }
-	  .columnname {
+		background-color: #ccc;
+        color: white;
 		font-weight: bold;
 	  }
 	  th, td {
-		border: 1px solid #ccc;
-		padding: 8px;
-		text-align: left;
+		padding: 12px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+		border:1px solid #ccc;
 	  }
-	  
 	  tr:nth-child(even) {
 		background: #efefef;
 	  }
@@ -69,7 +102,7 @@ table {
 	  tr:hover {
 		background: #d1d1d1;
 	  }
-
+*/
 body {
 	-webkit-text-size-adjust: none;
 }
@@ -118,7 +151,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #232323;
+		background-color: #fff;
 		/*
 		background-image: linear-gradient(#006494, #003554);
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
@@ -142,14 +175,14 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #232323;
+		background-color: #fff;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
 	body, input, select, textarea {
-		font-family: "Quicksand", Helvetica, sans-serif;
-		font-size: 17pt;
-		font-weight: 400;
+		font-family: "Montserrat", Helvetica, sans-serif;
+		font-size: 16px;
+		font-weight: 300;
 		line-height: 1.65;
 	}
 
@@ -217,14 +250,16 @@ input, select, textarea {
 		}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-weight: 300;
+		/* font-weight: 300; */
 		line-height: 1.5;
 		margin: 0 0 0.3em 0;
 		letter-spacing: -0.025em;
+		font-family: 'Montserrat', sans-serif;
+		color: #000;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
+			color: #000;
 			text-decoration: none;
 		}
 
@@ -234,14 +269,14 @@ input, select, textarea {
 	}
 
 	h2 {
-		font-family: 'Quicksand', sans-serif;
+		font-family: 'Montserrat', sans-serif;
 		font-size: 1.5em;
 		text-align: left;
-		font-weight: 700;
+		font-weight: 600;
 	}
 
 	h2 span {
-		background-color:#F26B4E;
+		background-color:#353BF7;
 		color: #fff;
 		padding: 5px;
 
@@ -250,6 +285,7 @@ input, select, textarea {
 	h3 {
 		font-size: 1.25em;
 		text-align: left;
+		font-weight: 300;
 	}
 
 	h4 {
@@ -349,7 +385,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: black;
 	}
 
 	blockquote {
@@ -1885,6 +1921,8 @@ input, select, textarea {
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
+		/* background-color: #EFF1FF;
+		color: red; */
 	}
 
 		input[type="submit"].icon,
@@ -2383,7 +2421,7 @@ input, select, textarea {
 
 	.icon.alt {
 		border-color: rgba(255, 255, 255, 0.35);
-		color: #ffffff;
+		color: black;
 	}
 
 		.icon.alt:hover {
@@ -2496,6 +2534,7 @@ input, select, textarea {
 
 		dl dd {
 			margin-left: 2em;
+			color: black;
 		}
 
 		dl.alt dt {
@@ -2507,7 +2546,7 @@ input, select, textarea {
 		}
 
 		dl.alt dd {
-			margin: 0 0 0.85em 5.5em;
+			margin: 0 0 0.85em 2.5em;
 		}
 
 		dl.alt:after {
@@ -2521,7 +2560,7 @@ input, select, textarea {
 	}
 
 	dl dt {
-		color: #ffffff;
+		color: #000;
 	}
 
 /* Actions */
@@ -2675,7 +2714,7 @@ input, select, textarea {
 
 		header.major h2 {
 			font-size: 2em;
-			font-weight: 900;
+			/* font-weight: 900; */
 		}
 
 			header.major h2:after {
@@ -2742,89 +2781,20 @@ input, select, textarea {
 
 /* Table */
 
-	.table-wrapper {
-		-webkit-overflow-scrolling: touch;
-		overflow-x: auto;
-	}
-
 	table {
-		margin: 0 0 2em 0;
 		width: 100%;
+		border-collapse: collapse;
+		margin: 0 auto;
 	}
 
-		table tbody tr {
-			border: solid 1px;
-			border-left: 0;
-			border-right: 0;
-		}
-
-		table td {
-			padding: 0.75em 0.75em;
-		}
-
-		table th {
-			font-size: 0.9em;
-			font-weight: 400;
-			padding: 0 0.75em 0.75em 0.75em;
-			text-align: left;
-		}
-
-		table thead {
-			border-bottom: solid 2px;
-		}
-
-		table tfoot {
-			border-top: solid 2px;
-		}
-
-		table.alt {
-			border-collapse: separate;
-		}
-
-			table.alt tbody tr td {
-				border: solid 1px;
-				border-left-width: 0;
-				border-top-width: 0;
-			}
-
-				table.alt tbody tr td:first-child {
-					border-left-width: 1px;
-				}
-
-			table.alt tbody tr:first-child td {
-				border-top-width: 1px;
-			}
-
-			table.alt thead {
-				border-bottom: 0;
-			}
-
-			table.alt tfoot {
-				border-top: 0;
-			}
-
-	table tbody tr {
-		border-color: rgba(255, 255, 255, 0.35);
+	th, td {
+		padding: 10px;
+		text-align: left;
+		border: 1px solid #ddd;
 	}
 
-		table tbody tr:nth-child(2n + 1) {
-			background-color: rgba(255, 255, 255, 0.075);
-		}
-
-	table th {
-		color: #ffffff;
-	}
-
-	table thead {
-		border-bottom-color: rgba(255, 255, 255, 0.35);
-	}
-
-	table tfoot {
-		border-top-color: rgba(255, 255, 255, 0.35);
-	}
-
-	table.alt tbody tr td {
-		border-color: rgba(255, 255, 255, 0.35);
+	thead th {
+		font-weight: bold;
 	}
 
 /* Features */
@@ -3260,7 +3230,7 @@ input, select, textarea {
 		width: 64em;
 		max-width: calc(100% - 4em);
 		padding: 1em;
-		background-color: #f7f7f7;
+		background-color: #fff;
 		border-top-left-radius: 0.25em;
 		border-top-right-radius: 0.25em;
 		cursor: default;
@@ -3417,12 +3387,13 @@ input, select, textarea {
 		#main input[type="button"],
 		#main button,
 		#main .button {
-			background-color: transparent;
-			box-shadow: inset 0 0 0 1px #dddddd;
-			color: #636363 !important;
+			background-color: #020AF5;
+			box-shadow: inset 0 0 0 0 #dddddd;
+			color: #fff !important;
+			border-radius: 30px;
 		}
 
-			#main input[type="submit"]:hover,
+			/* #main input[type="submit"]:hover,
 			#main input[type="reset"]:hover,
 			#main input[type="button"]:hover,
 			#main button:hover,
@@ -3436,7 +3407,7 @@ input, select, textarea {
 			#main button:active,
 			#main .button:active {
 				background-color: rgba(222, 222, 222, 0.5);
-			}
+			} */
 
 			#main input[type="submit"].icon:before,
 			#main input[type="reset"].icon:before,
@@ -3585,7 +3556,7 @@ input, select, textarea {
 		}
 
 		#main header.major h2:after {
-			background-color: #F26B4E;
+			background-color: #353BF7;
 			/*
 			background-image: -moz-linear-gradient(90deg, #023e8a, #0077b6, #0096c7);
 			background-image: -webkit-linear-gradient(90deg, #023e8a, #0077b6, #0096c7);
@@ -3735,6 +3706,7 @@ input, select, textarea {
 		padding: 5em 5em 3em 5em ;
 		width: calc(100% + 2em);
 		margin: 0 0 3em -2em;
+		color: black;
 	}
 
 		#footer > * {
@@ -3831,7 +3803,7 @@ input, select, textarea {
 /* Create two equal columns that floats next to each other */
 .column {
 	float: left;
-	width: 50%;
+	width: 100%;
 	padding: 0px;
 	
   }
@@ -3895,9 +3867,14 @@ input, select, textarea {
 /* End to Adding typing effect */
 
 .textbackground {
-	background-color: #E5E2E2;
-	padding: 2px;
+	background-color: #F2F3FE;
+	padding: 5px;
 	border-radius: 5px;
+	font-family: Inconsolata;
+	font-weight: 300;
+	font-family: Inconsolata;
+	font-size: 12pt !important;
+	color: #353BF7;
 }
 
 .projectname {
@@ -3923,4 +3900,10 @@ input, select, textarea {
 .blogpost_link {
 	color: grey;
 	text-decoration: underline;
+}
+
+/*Project detailed page */
+.detailed-skill {
+	color: #000;
+	text-align: center;
 }
