--- a/main.css
+++ b/main.css
@@ -83,7 +83,7 @@ table {
 		/* padding: 20px;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 		border-radius: 8px; */
-		}/*
+		/*
 	   th {
 		background-color: #ccc;
         color: white;
