--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ table {
 		/* padding: 20px;
 		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 		border-radius: 8px; */
-		}/*
+		/*
 	   th {
 		background-color: #ccc;
         color: white;
@@ -3906,4 +3906,47 @@ input, select, textarea {
 .detailed-skill {
 	color: #000;
 	text-align: center;
+}
+
+/* Đặt tab như trong word */
+
+ul {
+	/* list-style-type: disc; /* Hiển thị bullet */
+	/* padding-left: 22px; */
+	/* margin: 0; */
+	display: block;
+	list-style-type: disc;
+	margin: 0 0 1.3em 0;
+	padding-left: 1.5em;
+}
+
+.content-line {
+	display: flex;
+	align-items: center;
+	margin-bottom: 5px; /* Giảm khoảng cách giữa các dòng */
+	line-height: 1.4; /* Điều chỉnh khoảng cách giữa các dòng nội dung */
+	position: relative; /* Đảm bảo bullet hiển thị đúng vị trí */
+	/* list-style-type: disc; */
+}
+
+.content-line::before {
+	content: ''; /* Tạo phần tử trước để hiển thị bullet */
+	position: absolute;
+	left: -15px; /* Điều chỉnh vị trí của bullet */
+	width: 6px;
+	height: 6px;
+	background-color: #636363;
+	border-radius: 100%;
+	top: 50%;
+	transform: translateY(-50%);
+	/* list-style-type: disc; */
+}
+
+.label {
+	min-width: 120px;
+	padding-right: 5px;
+}
+
+.value {
+	flex: 1;
 }
